opam-version: "1.2"
maintainer: "martin@mjambon.com"
authors: ["Martin Jambon"]
homepage: "https://github.com/mjambon/jobqueue"
bug-reports: "https://github.com/mjambon/jobqueue/issues"
dev-repo: "https://github.com/mjambon/jobqueue.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name]
]
depends: ["jbuilder" {build}]
